.opsera-enterpriseapp-vote/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opsera-enterpriseapp-vote-dev
  labels:
    tenant: opsera
    app: enterpriseapp-vote
    managed-by: opsera-c2c
