.opsera-enterpriseapp-vote/k8s/base/vote-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote
  labels:
    app: vote
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vote
  template:
    metadata:
      labels:
        app: vote
    spec:
      serviceAccountName: enterpriseapp-vote-sa
      imagePullSecrets:
        - name: ecr-pull-secret
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - name: vote
          image: PLACEHOLDER_ECR_URI_VOTE
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
