.opsera-enterpriseapp-vote/k8s/base/db-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    app: db
spec:
  type: ExternalName
  externalName: db.local
