.opsera-enterpriseapp-vote/k8s/base/redis-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: redis
spec:
  type: ExternalName
  externalName: redis.local
