.opsera-enterpriseapp-vote/k8s/base/vote-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote
  labels:
    app: vote
spec:
  type: ClusterIP
  selector:
    app: vote
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
